tests/date/date.exp
Error ----------------------------------------------------------------------------------------------------- date.js:2:16

Cannot assign `d.getTime()` to `x` because number [1] is incompatible with string [2].

   date.js:2:16
     2| var x:string = d.getTime();
                       ^^^^^^^^^^^

References:
   <BUILTINS>/core.js:363:16
   363|     getTime(): number;
                       ^^^^^^ [1]
   date.js:2:7
     2| var x:string = d.getTime();
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:18:1

Cannot call `Date` because:
 - Either object literal [1] is incompatible with number [2].
 - Or object literal [1] is incompatible with string [3].
 - Or object literal [1] is incompatible with number [4].

   date.js:18:1
    18| new Date({});
        ^^^^^^^^^^^^

References:
   date.js:18:10
    18| new Date({});
                 ^^ [1]
   <BUILTINS>/core.js:352:28
   352|     constructor(timestamp: number): void;
                                   ^^^^^^ [2]
   <BUILTINS>/core.js:353:29
   353|     constructor(dateString: string): void;
                                    ^^^^^^ [3]
   <BUILTINS>/core.js:354:23
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                              ^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- date.js:19:1

Cannot call `Date` because string [1] is incompatible with number [2].

   date.js:19:1
    19| new Date(2015, '6');
        ^^^^^^^^^^^^^^^^^^^

References:
   date.js:19:16
    19| new Date(2015, '6');
                       ^^^ [1]
   <BUILTINS>/core.js:354:38
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:20:1

Cannot call `Date` because string [1] is incompatible with number [2].

   date.js:20:1
    20| new Date(2015, 6, '18');
        ^^^^^^^^^^^^^^^^^^^^^^^

References:
   date.js:20:19
    20| new Date(2015, 6, '18');
                          ^^^^ [1]
   <BUILTINS>/core.js:354:52
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:21:1

Cannot call `Date` because string [1] is incompatible with number [2].

   date.js:21:1
    21| new Date(2015, 6, 18, '11');
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   date.js:21:23
    21| new Date(2015, 6, 18, '11');
                              ^^^^ [1]
   <BUILTINS>/core.js:354:67
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:22:1

Cannot call `Date` because string [1] is incompatible with number [2].

   date.js:22:1
    22| new Date(2015, 6, 18, 11, '55');
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   date.js:22:27
    22| new Date(2015, 6, 18, 11, '55');
                                  ^^^^ [1]
   <BUILTINS>/core.js:354:84
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:23:1

Cannot call `Date` because string [1] is incompatible with number [2].

   date.js:23:1
    23| new Date(2015, 6, 18, 11, 55, '42');
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   date.js:23:31
    23| new Date(2015, 6, 18, 11, 55, '42');
                                      ^^^^ [1]
   <BUILTINS>/core.js:354:101
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:24:1

Cannot call `Date` because string [1] is incompatible with number [2].

   date.js:24:1
    24| new Date(2015, 6, 18, 11, 55, 42, '999');
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   date.js:24:35
    24| new Date(2015, 6, 18, 11, 55, 42, '999');
                                          ^^^^^ [1]
   <BUILTINS>/core.js:354:123
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                                                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:25:1

Cannot call `Date` because:
 - Either no arguments are expected by function type [1].
 - Or no more than 1 argument is expected by function type [2].
 - Or no more than 1 argument is expected by function type [3].
 - Or no more than 7 arguments are expected by function type [4].

   date.js:25:1
    25| new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:351:5
   351|     constructor(): void;
            ^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/core.js:352:5
   352|     constructor(timestamp: number): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:353:5
   353|     constructor(dateString: string): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/core.js:354:5
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- date.js:26:1

Cannot call `Date` because string [1] is incompatible with number [2].

   date.js:26:1
    26| new Date('2015', 6);
        ^^^^^^^^^^^^^^^^^^^

References:
   date.js:26:10
    26| new Date('2015', 6);
                 ^^^^^^ [1]
   <BUILTINS>/core.js:354:23
   354|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                              ^^^^^^ [2]



Found 10 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
